# clipforge

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
clipforge/: __init__.py  __main__.py  audio.py  cli.py  config.py  errors.py  extract.py  logger.py  manifest.py  models.py  pipeline.py  review.py  segment.py  transcribe.py  validate.py
tests/: conftest.py  test_audio.py  test_cli.py  test_config.py  test_errors.py  test_extract.py  test_logger.py  test_manifest.py  test_models.py  test_pipeline.py  test_review.py  test_segment.py  test_transcribe.py  test_validate.py
